Pull up following revision(s) (requested by jakllsch in ticket #1409): 	sys/dev/usb/ehci.c: revision 1.167 Nvidia EHCI controllers do not ignore one or more of the "Port Number", "Hub Address", "Split Completion Mask" fields in the Queue Head marked "This field is ignored by the host controller unless the EPS field indicates a full- or low-speed device.". Therefore, only populate these fields for full- and low-speed devices. Fixes PR#37884.